storage/innobase/fil/fil0fil.cc
@@ -2576,7 +2576,7 @@ fil_ibd_load(
 
 	/* Read and validate the first page of the tablespace.
 	Assign a tablespace name based on the tablespace type. */
-	switch (file.validate_for_recovery()) {
+	switch (file.validate_for_recovery(&space_id)) {
 		os_offset_t	minimum_size;
 	case DB_SUCCESS:
 		deferred_space = file.m_defer;
