storage/innobase/fsp/fsp0file.cc
@@ -387,10 +387,11 @@ exist and be successfully opened. We initially open it in read-only mode
 because we just want to read the SpaceID.  However, if the first page is
 corrupt and needs to be restored from the doublewrite buffer, we will
 reopen it in write mode and ry to restore that page.
+@param	space_id	space id to validate for recovery
 @retval DB_SUCCESS if tablespace is valid, DB_ERROR if not.
 m_is_valid is also set true on success, else false. */
 dberr_t
-Datafile::validate_for_recovery()
+Datafile::validate_for_recovery(ulint *space_id)
 {
 	dberr_t err;
 
@@ -433,15 +434,25 @@ Datafile::validate_for_recovery()
 			}
 		}
 
-		if (m_space_id == ULINT_UNDEFINED) {
-			return DB_SUCCESS; /* empty file */
+		bool empty_tablespace= (m_space_id == ULINT_UNDEFINED);
+		if (empty_tablespace && space_id) {
+			/* Set space id to find out whether
+			the page exist in double write buffer */
+			m_space_id = *space_id;
 		}
 
 		if (restore_from_doublewrite()) {
-			if (m_defer) {
+			if (!m_defer) {
+				return DB_CORRUPTION;
+			} else if (!empty_tablespace) {
 				return err;
+			} else {
+				/* Reset the space id. InnoDB
+				could rebuild the page0
+				from redo log */
+				m_space_id = ULINT_UNDEFINED;
+				return DB_SUCCESS; /* empty file */
 			}
-			return(DB_CORRUPTION);
 		}
 
 		/* Free the previously read first page and then re-validate. */
@@ -769,10 +780,13 @@ Datafile::restore_from_doublewrite()
 		in the doublewrite buffer, then the recovery is going to fail
 		now. Hence this is treated as an error. */
 
-		ib::error()
-			<< "Corrupted page " << page_id
-			<< " of datafile '" << m_filepath
-			<< "' could not be found in the doublewrite buffer.";
+		if (!m_defer) {
+			ib::error()
+				<< "Corrupted page " << page_id
+				<< " of datafile '" << m_filepath
+				<< "' could not be found in the "
+				<< "doublewrite buffer.";
+		}
 
 		return(true);
 	}
